fix card spacing

--- a/styles/components/previewCard.scss
+++ b/styles/components/previewCard.scss
@@ -5,7 +5,7 @@
   border: 1px solid #fafaf9;
   box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.5);
   border-radius: 10px;
-  margin: 0 20px;
+  margin: 0 20px 40px 20px;
   max-width: 500px;
 }
 
