--- a/styles/home.scss
+++ b/styles/home.scss
@@ -72,5 +72,4 @@
   display: flex;
   flex-flow: row wrap;
   justify-content: center;
-  margin-bottom: 40px;
 }
